Bug 409179 - Inconsistent autoresume state causes download manager instantiation to fail (can lead to crash).  r=Mardak